--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "emoji-picker-react": "^4.12.3",
     "next": "15.3.4",
     "react": "^19.0.0",
